Trying to fix some of the more breaking issues

--- a/index.less
+++ b/index.less
@@ -12,7 +12,7 @@
 @import "styles/lists";
 @import "styles/panels";
 @import "styles/progress";
-// @import "styles/settings-view";
+@import "styles/settings-view";
 @import "styles/sites";
 @import "styles/status-bar";
 @import "styles/tabs";
