--- a/styles/editor.less
+++ b/styles/editor.less
@@ -2,8 +2,15 @@
 // -------------------
 //
 
+.item-views > .editor {
+  margin-top: 10px;
+}
 
-// BEGIN APEX-UI-SLIM ADDITIONS  -----------------
+atom-text-editor .gutter {
+  background: @overlay-background-color;
+}
+
+// APEX-UI-SLIM:::
 
 atom-text-editor, :host {
   background: @base-background-color;
@@ -27,7 +34,7 @@ body {
 atom-pane {
   padding: 0 0;
 }
-
+// :::end
 
 // Mini Editor
 // -------------------
