--- a/styles/lists.less
+++ b/styles/lists.less
@@ -55,7 +55,7 @@
 .select-list {
   .character-match {
     font-weight: normal !important;
-    border-bottom: 1px solid @oc-blue-3;
+    border-bottom: 1px solid @accent-color;
     color: inherit;
   }
 }
@@ -105,7 +105,7 @@ autocomplete-suggestion-list.select-list.popover-list {
 
 autocomplete-suggestion-list {
   .suggestion-list-scroller {
-    background: white;
+    background: @overlay-background-color; // white
   }
 
   .left-label {
@@ -120,7 +120,7 @@ autocomplete-suggestion-list {
     // display: none !important;
 
     .icon {
-      background: rgba(255, 255, 255, .5) !important;
+      // background: rgba(255, 255, 255, .5) !important;
       color: @oc-gray-4;
     }
   }
