--- a/styles/panels.less
+++ b/styles/panels.less
@@ -35,7 +35,7 @@ atom-panel.modal {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, .95);
+  background: @overlay-background-color; // rgba(255, 255, 255, .95);
   // :end
 }
 
