--- a/styles/editor.less
+++ b/styles/editor.less
@@ -7,7 +7,7 @@
 }
 
 atom-text-editor .gutter {
-  background: @overlay-background-color;
+  background: @base-background-color;
 }
 
 // APEX-UI-SLIM:::
@@ -17,7 +17,7 @@ atom-text-editor, :host {
 }
 
 body {
-  transition: all 125ms cubic-bezier(0.215, 0.610, 0.355, 1.000); // .transition;
+  transition: all 125ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
 }
 
 // Editor blur
