--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -3,8 +3,8 @@
 atom-pane:not(.active) {
   .tab-bar .tab.active {
     // border-top: 1px solid transparent;
-    border-color: fade(@accent-color, 33%);
-    // border-top: 1px solid fade(@accent-color, 50%);
+    border-color: fade(@splash-color, 33%);
+    // border-top: 1px solid fade(@splash-color, 50%);
     // padding-top: 1px;
     color: @text-color-subtle;
   }
@@ -63,7 +63,7 @@ atom-pane:not(.active) {
       flex: 1;
       color: @text-color-selected;
       // border-top: 1px solid @tab-border-color-active;
-      border-color: @accent-color;
+      border-color: @splash-color;
       font-weight: bold;
       .title {
         padding: 0;
