--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -4,19 +4,36 @@
 
 
 .tooltip {
+  @tooltip-color: @background-color-info; // @splash-color;
+  .bg-text-color(@tooltip-color);
+
   .tooltip-inner {
     line-height: 1;
     padding: .75em;
     white-space: nowrap;
     max-width: none;
-    color: #FFF; // APEX-UI-SLIM
+    color: @bg-text-color;
+    background-color: @tooltip-color;
+  }
+
+  &.top .tooltip-arrow {
+    border-top-color: @tooltip-color;
+  }
+  &.right .tooltip-arrow {
+    border-right-color: @tooltip-color;
+  }
+  &.bottom .tooltip-arrow {
+    border-bottom-color: @tooltip-color;
+  }
+  &.left .tooltip-arrow {
+    border-left-color: @tooltip-color;
   }
 
   .keystroke {
     padding: .15em .4em;
     margin: 0 -.3em 0 .25em;
     // border-radius: max(2px, @component-border-radius / 2); // APEX-UI-SLIM
-    color: #FFF; // @text-color-selected; // APEX-UI-SLIM
+    color: @bg-text-color;
     background: @background-color-selected;
   }
 }
