--- a/styles/lists.less
+++ b/styles/lists.less
@@ -9,21 +9,17 @@
 .list-group {
   li {
     padding-left: @component-padding/2;
-    // APEX-UI-SLIM:
     border-bottom: 1px dotted @base-border-color;
     color: @text-color-subtle;
     transition: all 125ms cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    // :end
 
     // We want to highlight the background of the list items because we dont know their size.
     &.selected {
       color: @text-color-selected;
-      // APEX-UI-SLIM:
-      // background-color: @background-color-selected;
+      background-color: @background-color-selected;
       z-index: 15;
-      // :end
 
-      &:before{ display: none; }
+      &:before { display: none; }
     }
 
     &:not(.selected) {
@@ -49,23 +45,51 @@
 
 // Select List -------------------
 
+atom-panel.modal {
+  & > .select-list {
+    min-width: 500px;
+  }
+
+  .select-list atom-text-editor[mini] {
+    margin-bottom: 0;
+    padding: 10px 7.5px;
+    line-height: 1em;
+    min-height: calc(~"1em + 20px");
+  }
+}
+
 .select-list {
+  ol.list-group {
+    margin-top: 0;
+  }
+
   li {
     padding: @component-padding * .75 @component-padding; // @component-padding/2 @component-padding; // APEX-UI-SLIM
+
+    &.selected {
+      .secondary-line {
+        color: @text-color-subtle;
+      }
+    }
+
+    &.selected.active {
+      color: @text-color-highlight;
+    }
   }
 
   .status {
     float: right;
   }
-}
 
-// APEX-UI-SLIM:::
-
-.select-list {
   .character-match {
     // font-weight: normal !important;
     border-bottom: 1px solid @splash-color;
     color: inherit;
+  }
+
+  .error-message, .loading-message {
+    display: inline-block;
+    padding: 10px 7.5px;
   }
 }
 
@@ -104,10 +128,6 @@ autocomplete-suggestion-list.select-list.popover-list {
   // }
 }
 
-.select-list .selected .secondary-line {
-  color: @text-color-subtle;
-}
-
 .list-group li:not(.list-nested-item) {
   line-height: 1.8;
 }
@@ -134,24 +154,3 @@ autocomplete-suggestion-list {
     }
   }
 }
-
-// // Popover List -------------------
-// // Used as a popover for something like autocomplete.
-//
-// .select-list.popover-list {
-//   @popover-list-padding: @component-padding/2;
-//
-//   padding: @popover-list-padding;
-//   border-radius: @component-border-radius;
-//   background-color: @overlay-background-color;
-//   box-shadow: 0 2px 8px 1px hsla(0,0%,0%,.3);
-//
-//   .list-group {
-//     margin-top: @popover-list-padding;
-//     li {
-//       padding-left: @popover-list-padding;
-//     }
-//   }
-// }
-
-// :::end
