--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -9,8 +9,6 @@
 @import "ui-splash";
 
 
-@primary-color: @oc-gray-9;
-
 // Base colors
 
 @base-background-color: @oc-gray-9;
@@ -56,7 +54,7 @@
 @pane-item-background-color: @base-background-color;
 @pane-item-border-color:     @base-border-color;
 
-@input-background-color: @app-background-color;
+@input-background-color: @base-background-color;
 @input-border-color:     @base-border-color;
 
 @tool-panel-background-color: @base-background-color;
@@ -106,15 +104,12 @@
 @component-icon-size: 16px;
 @component-line-height: 25px;
 
-@tab-height: 34px; // 30px;
+@tab-height: 34px;
 
 // Misc
 
 @component-border-radius: 2px;
-// APEX-UI-SLIM:
-// @font-family: '.SFNSText-Regular', 'SF UI Text', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
 @font-family: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
-// :end
