Initial light-to-dark changes

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -10,7 +10,7 @@
     background-color: @inset-panel-background-color;
 
     .panel-heading {
-        background-color: lighten(@inset-panel-background-color, 4%);
+        background-color: darken(@inset-panel-background-color, 4%); // lighten(@inset-panel-background-color, 4%);
     }
 }
 
@@ -30,7 +30,7 @@ atom-panel.modal {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, .95);
+  background: rgba(33, 37, 41, .95); // rgba(255, 255, 255, .95);
 }
 
 atom-panel.modal > .select-list {
