--- a/styles/lists.less
+++ b/styles/lists.less
@@ -44,7 +44,7 @@
 .select-list {
   .character-match {
     font-weight: normal !important;
-    border-bottom: 1px solid @oc-blue-3;
+    border-bottom: 1px solid @oc-blue-6; // @oc-blue-3;
     color: inherit;
   }
 }
@@ -75,9 +75,9 @@ autocomplete-suggestion-list.select-list.popover-list {
   }
 
   .selected {
-    background: @oc-gray-0;
+    background: @oc-gray-8; // @oc-gray-0;
     .icon {
-      color: @oc-gray-9;
+      color: @oc-gray-0; // @oc-gray-9;
     }
   }
 }
@@ -96,18 +96,18 @@ autocomplete-suggestion-list {
   }
 
   .left-label {
-    color: @oc-gray-6;
+    color: @oc-gray-3; // @oc-gray-6;
   }
 
   .word-container {
-    color: @oc-gray-5;
+    color: @oc-gray-4; // @oc-gray-5;
   }
 
   .icon-container {
     // display: none !important;
     .icon {
-      background: rgba(255, 255, 255, .5) !important;
-      color: @oc-gray-4;
+      background: rgba(33, 37, 41, .5) !important; // rgba(255, 255, 255, .5) !important;
+      color: @oc-gray-5; // @oc-gray-4;
     }
   }
 }
