--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -7,14 +7,14 @@
         padding: 0.75em;
         white-space: nowrap;
         max-width: none;
-        color: #FFF;
+        color: @text-color-selected; // #FFF;
     }
 
     .keystroke {
         padding: 0.15em 0.4em;
         margin: 0 -.3em 0 0.25em;
         // border-radius: max(2px, @component-border-radius / 2);
-        color: #FFF;
+        color: @text-color-selected; // #FFF;
         background: @background-color-selected;
     }
 }
