Minor tweaks (tabs, message, etc.) and readme updates

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -7,10 +7,10 @@ body {
   .transition;
 }
 
-// Editor blur
-.is-blurred {
-  -webkit-filter: grayscale();
-}
+// // Editor blur
+// .is-blurred {
+//   -webkit-filter: grayscale();
+// }
 
 // Remove negative margin-top from no-title-bar
 .platform-darwin atom-workspace atom-workspace-axis.horizontal {
