--- a/styles/status-bar.less
+++ b/styles/status-bar.less
@@ -9,17 +9,26 @@
   color: @text-color;
   border-top: 1px solid @base-border-color;
   background-color: @tree-view-background-color;
+
+
+  .status-bar-left, .status-bar-right {
+    font-size: 0.75em;
+  }
 }
 
 .footer {
-  transition: opacity 150ms ease-out;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  transition: opacity 150ms ease-out;
-  opacity: 0;
-  &:hover {
-    opacity: 1;
+  // // transition: opacity 150ms ease-out;
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
+  // width: 100%;
+  // transition: opacity 150ms ease-out;
+  // // opacity: 0;
+  // &:hover {
+  //   opacity: 1;
+  // }
+
+  &.tool-panel.panel-footer {
+    height: 24px;
   }
 }
