--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -78,7 +78,7 @@
 }
 // Button Group -----------------------
 .btn-group > .btn {
-    .transition-03;
+    transition: 0.3s ease;
     border-color: transparent;
 
     &:hover {
