--- a/styles/text.less
+++ b/styles/text.less
@@ -14,6 +14,7 @@
 .text-warning { color: @text-color-warning; }
 .text-error   { color: @text-color-error; }
 
+.invisible-character { opacity: 0.5; }
 
 // Highlights ---------------
 
