--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -7,7 +7,25 @@
         padding: 0.75em;
         white-space: nowrap;
         max-width: none;
-        color: @text-color-selected; // #FFF;
+        // color: @text-color-selected; // #FFF;
+        background: @splash-color;
+        .color-contrast(@splash-color);
+    }
+
+    &.top .tooltip-arrow {
+      border-top-color: @splash-color;
+    }
+
+    &.bottom .tooltip-arrow {
+      border-bottom-color: @splash-color;
+    }
+
+    &.left .tooltip-arrow {
+      border-left-color: @splash-color;
+    }
+
+    &.right .tooltip-arrow {
+      border-right-color: @splash-color;
     }
 
     .keystroke {
